# Selenium-538-Madness

./: .gitignore  Cargo.toml
src/: main.rs  simulate.rs  teams.rs  tournament.rs
