[package]
name = "march-madness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.28.1"
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread", "signal"] }
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
env_logger = "0.9.0"
scraper = "0.12.0"
log = "0.4.14"
rand = {version = "0.8.4", features = ["std_rng"]}
clap = {version = "3.0.7", features=["derive"]}
anyhow = "1.0.51"
colored = "2"
